--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li class="back">Inimigos</li>
                     </ul>
                 </div> 
-                <img src="images/ac.png" class="logoSek" alt="">   
+                <img src="images/a.png" class="logoSek" alt="">   
             </div>
             <div id="frase"><b>Nada irá te deter na retomada de sua honra</b></div>
             <div id="logo">
@@ -86,6 +86,7 @@
         
         <div class="images responsive">
             <div class="boxInimigo" id="lastClone">
+                <i class="fas fa-play"></i>
                 <img src="images/inimigo1.png" alt="" >
             </div>
             <div class="boxInimigo">
