--- a/index.html
+++ b/index.html
@@ -116,6 +116,27 @@
     </div>
     <div id="linha2" class="ajusteWidth"><img src="images/linha2.png"  alt=""></div>
     <div id="linha" class="ajusteWidth"><img src="images/linha1.png"  alt=""></div>
+    <div id="comprar">
+        <img src="images/brush-stroke.png" class="brush ajusteWidth" alt="">
+        <div id="tit" class="in" data-aos="fade-down">Sekiro</div>
+        <ul>
+            <li><img src="images/sek1.png" alt=""></li>
+            <li><img src="images/sek2.jpg" alt=""></li>
+            <li><img src="images/sek3.jpg" alt=""></li>
+        </ul>
+        <img src="images/brush-stroke.png" class="brush3 ajusteWidth" alt="">
+    </div>
+    <footer>
+        <img src="images/logoAct.png" class="logofim" alt="">
+        <img src="images/logoFrom.png" class="logofim" alt="">
+        <ul>
+            <li><i class="fab fa-youtube"></i></li>
+            <li><i class="fab fa-instagram"></i></li>
+            <li><i class="fab fa-facebook-square"></i></li>
+            <li><i class="fab fa-twitter-square"></i></li>
+        </ul>
+        <p>©2020 FromSoftware, Inc. Todos os direitos reservados. </p>
+    </footer>
     <script src="js/aos.js"></script>
     <script>
         $('#menuIcon').on('click', function(){
