--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </div>
         <div id="linha" class="ajusteWidth"><img src="images/linha1.png" alt=""></div>
         <div id="linha2" class="ajusteWidth"><img src="images/linha2.png"  alt=""></div>
-        <div id="video" data-aos="fade-right">
+        <div id="video" data-aos="flip-right">
             <iframe width="994" height="520" src="https://www.youtube.com/embed/9qLoh37QjtQ" frameborder="0" allow="accelerometer"></iframe>
         </div>
-        <p data-aos="fade-left">Trilhe seu próprio caminho de vingança nesta premiada aventura da FromSoftware, os criadores de Bloodborne e da franquia Dark Souls.</p>
+        <p data-aos="flip-left">Trilhe seu próprio caminho de vingança nesta premiada aventura da FromSoftware, os criadores de Bloodborne e da franquia Dark Souls.</p>
     </div>
 
     <div id="premios" class="ajusteWidth">
@@ -118,12 +118,8 @@
     <div id="linha" class="ajusteWidth"><img src="images/linha1.png"  alt=""></div>
     <div id="comprar">
         <img src="images/brush-stroke.png" class="brush ajusteWidth" alt="">
-        <div id="tit" class="in" data-aos="fade-down">Sekiro</div>
-        <ul>
-            <li><img src="images/sek1.png" alt=""></li>
-            <li><img src="images/sek2.jpg" alt=""></li>
-            <li><img src="images/sek3.jpg" alt=""></li>
-        </ul>
+        <div id="tit" class="in" data-aos="fade-down">Comprar</div>
+
         <img src="images/brush-stroke.png" class="brush3 ajusteWidth" alt="">
     </div>
     <footer>
@@ -138,6 +134,7 @@
         <p>©2020 FromSoftware, Inc. Todos os direitos reservados. </p>
     </footer>
     <script src="js/aos.js"></script>
+    <script src="js/slider.js"></script>
     <script>
         $('#menuIcon').on('click', function(){
             $('#menu ul').slideToggle(800);
