--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div id="comprar" class="ajusteWidth ajusteBack">
         <img src="images/brush-stroke.png" class="brush ajusteWidth" alt="">
         <div id="tit" class="in" data-aos="fade-down">Comprar</div>
-        <div data-aos="fade-down">
+        <div>
             <img src="images/comprar-min.png" class="imgComprar" alt="">
             <img src="images/circle.png" id="circle2" alt="">
         </div>
