--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <img src="images/char.png" id="chara" alt="">
                 <img src="images/circle.png" alt="" id="circle" width="500px">
             </div>
-            <p id="descricao" data-aos="fade-left">
+            <p id="descricao" data-aos="fade-up">
                 Você é o "lobo de um braço só", um guerreiro desfigurado 
                 e caído em desgraça que foi resgatado do abismo da morte. 
                 Destinado a proteger um jovem senhor que descende de uma 
