--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         <img src="images/brush-stroke.png" class="brush3 ajusteWidth" alt="">
     </div>
     <footer>
-        <img src="images/logoAct.png" class="logofim" alt="">
-        <img src="images/logoFrom.png" class="logofim" alt="">
+        <a href="https://www.activision.com/br/pt/home"><img src="images/logoAct.png" class="logofim" alt=""></a>
+        <a href="https://www.fromsoftware.jp/ww/"><img src="images/logoFrom.png" class="logofim" alt=""></a>
         <ul>
             <li><i class="fab fa-youtube"></i></li>
             <li><i class="fab fa-instagram"></i></li>
