--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Sekiro™ Shadow Die Twice</title>
 </head>
 <body>
-    <div id="inicio" class="ajusteBack">
+    <div id="inicio" class="ajusteBack textC">
         <div id="para" class="ajusteBack ajusteWidth">
             <div id="head" class="ajusteWidth"> 
                 <a href="https://www.activision.com/br/pt/home"><img src="images/logoAct.svg" class="logoAct" alt=""></a>
@@ -33,8 +33,8 @@
         </div>
         <img src="images/fe.png" id="tile" alt="">
     </div>
-    <div id="historia">
-        <div id="tit" data-aos="fade-down">História</div>
+    <div id="historia" class="textC">
+        <div id="tit" data-aos="fade-down" class="textC">História</div>
         <div id="linha" class="ajusteWidth"><img src="images/linha1.png"  alt=""></div>
         <div id="linha2" class="ajusteWidth"><img src="images/linha2.png"  alt=""></div>
         <div class="content" data-aos="fade-up">
@@ -81,9 +81,9 @@
     </div>
     
     <div id="inimigos" class="ajusteWidth">
-        <div id="tit" class="in" data-aos="fade-down">Inimigos</div>
-        <div id="linha" class="ajusteWidth"><img src="images/linha1.png"  alt=""></div>
-        <div id="linha2" class="ajusteWidth"><img src="images/linha2.png"  alt=""></div>    
+        <div id="tit" class="in textC" data-aos="fade-down">Inimigos</div>
+        <div id="linha" class="ajusteWidth textC"><img src="images/linha1.png"  alt=""></div>
+        <div id="linha2" class="ajusteWidth textC"><img src="images/linha2.png"  alt=""></div>    
         <div class="images responsive">
             <div class="boxInimigo" id="lastClone" data-aos="flip-left">
                 <i class="fas fa-play ajustePlay" state="https://www.youtube.com/embed/1e3tZlpMGbM"></i>
@@ -110,23 +110,23 @@
                 <i class="fas fa-play ajustePlay" state="https://www.youtube.com/embed/ygg_GBsoIQ4"></i>
             </div>
         </div>
-        <div id="videoIni">
+        <div id="videoIni" class="textC">
             <i class="fas fa-times-circle close" onclick="close()"></i>
             <iframe width="1265" height="720" src="" autoplay="true"></iframe>
         </div>
     </div>
-    <div id="linha2" class="ajusteWidth"><img src="images/linha2.png"  alt=""></div>
-    <div id="linha" class="ajusteWidth"><img src="images/linha1.png"  alt=""></div>
-    <div id="comprar" class="ajusteWidth ajusteBack">
+    <div id="linha2" class="ajusteWidth textC"><img src="images/linha2.png"  alt=""></div>
+    <div id="linha" class="ajusteWidth textC"><img src="images/linha1.png"  alt=""></div>
+    <div id="comprar" class="ajusteWidth ajusteBack textC">
         <img src="images/brush-stroke.png" class="brush ajusteWidth" alt="">
-        <div id="tit" class="in" data-aos="fade-down">Comprar</div>
+        <div id="tit" class="in" data-aos="fade-down" class="textC">Comprar</div>
         <div>
             <img src="images/comprar-min.png" class="imgComprar" alt="">
             <img src="images/circle.png" id="circle2" alt="">
         </div>
         <img src="images/brush-stroke.png" class="brush3 ajusteWidth" alt="">
     </div>
-    <footer>
+    <footer class="textC ajusteWidth">
         <a href="https://www.activision.com/br/pt/home"><img src="images/logoAct.png" class="logofim" alt=""></a>
         <a href="https://www.fromsoftware.jp/ww/"><img src="images/logoFrom.png" class="logofim" alt=""></a>
         <ul>
