--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div id="menu">
                     <ul>
                         <li class="back" id="hist">História</li>
-                        <li class="back ajustes comprar">Sekiro</li>
+                        <li class="back ajustes comprar">Comprar</li>
                         <li class="back" id="ini">Inimigos</li>
                     </ul>
                 </div> 
