--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
                 <div id="menu">
                     <ul>
                         <li class="back" id="hist">História</li>
-                        <li class="back ajustes comprar">Comprar</li>
+                        <li class="back">Comprar</li>
                         <li class="back" id="ini">Inimigos</li>
                     </ul>
                 </div> 
                 <img src="images/a.png" class="logoSek" alt="">   
             </div>
-            <div id="frase"><b>Nada irá te deter na retomada de sua honra</b></div>
-            <div id="logo">
-                <img src="images/logo.png" alt="">
+            <div id="centro">
+                <div id="frase"><b>Nada irá te deter na retomada de sua honra</b></div>
+                <div id="logo">
+                    <img src="images/logo.png" alt="">
+                </div>
             </div>
             <div class="btn ajusteBack">JOGUE AGORA</div>
         </div>
