--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="images/logo.png" alt="">
                 </div>
             </div>
-            <div class="btn ajusteBack">JOGUE AGORA</div>
+            <div class="btn ajusteBack"><span>JOGUE AGORA</span></div>
         </div>
         <img src="images/fe.png" id="tile" alt="">
     </div>
