--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="images/logo.png" alt="">
                 </div>
             </div>
-            <div class="btn ajusteBack"><span>JOGUE AGORA</span></div>
+            <div class="btn ajusteBack comprar"><span>JOGUE AGORA</span></div>
         </div>
         <img src="images/fe.png" id="tile" alt="">
     </div>
@@ -132,10 +132,10 @@
         <a href="https://www.activision.com/br/pt/home"><img src="images/logoAct.png" class="logofim" alt=""></a>
         <a href="https://www.fromsoftware.jp/ww/"><img src="images/logoFrom.png" class="logofim" alt=""></a>
         <ul>
-            <li><i class="fab fa-youtube"></i></li>
-            <li><i class="fab fa-instagram"></i></li>
-            <li><i class="fab fa-facebook-square"></i></li>
-            <li><i class="fab fa-twitter-square"></i></li>
+            <a href="https://www.youtube.com/channel/UCFlG1-ulYM9smpUYWlgOtBg"><li><i class="fab fa-youtube-square"></i></li></a>
+            <a href="https://www.instagram.com/sekirothegame/"><li><i class="fab fa-instagram"></i></li></a>
+            <a href="https://www.facebook.com/SekiroTheGame/"><li><i class="fab fa-facebook-square"></i></li></a>
+            <a href="https://twitter.com/sekirothegame"><li><i class="fab fa-twitter-square"></i></li></a>
         </ul>
         <p>©2020 FromSoftware, Inc. Todos os direitos reservados. </p>
     </footer>
