--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 arriscada para retomar sua honra — nem mesmo a própria 
                 morte.</p>
         </div>
+        <img src="/images/perRes.png" class="perna" data-aos="flip-up" alt="">
         <img src="images/brush-stroke.png" class="brush2 ajusteWidth" alt="">
     </div>
     
