--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="images/logo.png" alt="">
                 </div>
             </div>
-            <div class="btn ajusteBack comprar"><span>JOGUE AGORA</span></div>
+            <div class="btn comprar"><span>JOGUE AGORA</span></div>
         </div>
         <img src="images/fe.png" id="tile" alt="">
     </div>
@@ -50,7 +50,11 @@
             <video src="./images/B-1.m4v" loop  autoplay="true" type="video/mp4" data-aos="fade-down"></video>
             <video src="images/C-1.m4v" loop  autoplay="true" type="video/mp4" data-aos="fade-down"></video>
             <p data-aos="fade-up">
-                Explore o Japão do final dos anos 1500, no Período Sengoku, uma era brutal de conflitos constantes de vida e de morte, enquanto encara inimigos épicos em um mundo sombrio e distorcido. Use um arsenal de ferramentas prostéticas mortais e habilidades ninjas poderosas ao mesmo tempo em que alterna furtividade, travessia vertical e combate direto visceral em um confronto sangrento.
+                Explore o Japão do final dos anos 1500, no Período Sengoku, uma era brutal 
+                de conflitos constantes de vida e de morte, enquanto encara inimigos épicos 
+                em um mundo sombrio e distorcido. Use um arsenal de ferramentas prostéticas 
+                mortais e habilidades ninjas poderosas ao mesmo tempo em que alterna furtividade, 
+                travessia vertical e combate direto visceral em um confronto sangrento.
             </p>
             <div class="none" data-aos="fade-down"><video src="images/C-1.m4v" loop  autoplay="true" type="video/mp4" ></video></div>
         </div>
@@ -59,7 +63,8 @@
         <div id="video" data-aos="flip-right">
             <iframe width="994" height="520" src="https://www.youtube.com/embed/9qLoh37QjtQ" frameborder="0" allow="accelerometer"></iframe>
         </div>
-        <p data-aos="flip-left">Trilhe seu próprio caminho de vingança nesta premiada aventura da FromSoftware, os criadores de Bloodborne e da franquia Dark Souls.</p>
+        <p data-aos="flip-left">Trilhe seu próprio caminho de vingança nesta premiada aventura da FromSoftware, 
+            os criadores de Bloodborne e da franquia Dark Souls.</p>
     </div>
 
     <div id="premios" class="ajusteWidth">
